2007-12-16 Borut Razem <borut.razem AT siol.net>

	* device/include/pic16/stdbool.h: removed, since already exists in
	 device/include/; this also fixes bitopcse.c regression test for pic16
	 target
	* support/regression/fwk/inclusw/testfwk.h: added macro ASSERT_FAILED

2007-12-05 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixed bug #1844509 - Correction to Manual 4.6.9
	  Adding new PIC16

2007-12-01 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdmem.cc, sim/ucsim/cmd.src/mem.cc:
	  corrected handling of the highest_valid_address

2007-11-17 Raphael Neider <rneider AT web.de>

	* src/pic/main.c (_asmCmd): include debug arguments (-g as $3)
	* src/pic/glue.c (picglue): emit .file if --debug is given

2007-11-17 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (pic16_genPlus, pic16_genMinus): take special
	care when left or right operand resides in result, fixes #1830220

2007-11-17 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c, src/pic16/glue.c: reverted fix for bug
	  #983491 - "Merge duplicate strings function is ineffective"
	* support/regression/tests/bug-983491.c: regtest disabled
	* as/asxxsrc: created
	  as/asxxsrc/assym.c, as/asxxsrc/strcmpi.c: moved
	  as/hc08/assym.c, as/mcs51/assym.c, as/strcmpi.c,
	  as/z80/assym.c, as/hc08/asstore.c, as/mcs51/asstore.c: deleted
	  as/hc08/Makefile.bcc, as/hc08/Makefile.in, as/hc08/as_hc08.dsp,
	  as/hc08/asm.h, as/link/hc08/Makefile.bcc, as/link/hc08/Makefile.in,
	  as/link/hc08/link_hc08.dsp, as/link/mcs51/Makefile.bcc,
	  as/link/mcs51/Makefile.in, as/link/mcs51/aslink.dsp,
	  as/link/z80/Makefile.in, as/link/z80/linkgbz80.dsp,
	  as/link/z80/linkz80.dsp, as/mcs51/Makefile.bcc, as/mcs51/Makefile.in,
	  as/mcs51/asm.h, as/mcs51/asx8051.dsp, as/z80/Makefile.bcc,
	  as/z80/Makefile.in, as/z80/as_gbz80.dsp, as/z80/as_z80.dsp,
	  as/z80/Makefile.as_hc08, as/mcs51/Makefile.asx8051: modified
	  created as/asxxsrc directory, assym.c and strcpi.c moved into it
